[package]
name = "sedimentree_automerge_wasm"
version = "0.1.0"
description = "Wasm bindings for sedimentree_automerge"

categories = ["web-programming"]
keywords = ["sedimentree", "automerge", "wasm"]
readme = "./README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
automerge = { workspace = true }
base58 = { workspace = true }
bs58 = { version = "0.5", default-features = false, features = ["alloc", "check"] }
blake3 = { workspace = true }
build_info = { path = "../build_info" }
hex = "0.4.3"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
js-sys = { workspace = true }
sedimentree_core = { path = "../sedimentree_core" }
subduction_wasm = { path = "../subduction_wasm" }
thiserror = { workspace = true }
tracing = { workspace = true }
wasm-bindgen = { workspace = true }
wasm_refgen = { workspace = true }

[lints]
workspace = true
