[package]
name = "sedimentree_core"
version = "0.1.0"
description = "Core data types for the Sedimentree protocol."

authors.workspace = true
categories = ["data-structures"]
edition.workspace = true
keywords = ["set-reconcilliation"]
license.workspace = true
readme = "./README.md"
repository.workspace = true
rust-version.workspace = true

[dependencies]
arbitrary = { workspace = true, optional = true, features = ["derive"] }
async-lock = { workspace = true }
blake3 = { workspace = true }
futures = { workspace = true }
futures_kind = { workspace = true }
futures-util = { workspace = true }
num-bigint = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"]}
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
arbitrary = { workspace = true, optional = false, features = ["derive"] }
bolero = { workspace = true, features = ["arbitrary"] }
criterion = { workspace = true }
rand = { workspace = true }
tracing-subscriber = { workspace = true }

[[bench]]
name = "sedimentree"
harness = false

[features]
default = []
arbitrary = ["dep:arbitrary"]
serde = ["dep:serde"]
std = [
  "async-lock/std",
  "blake3/std",
  "futures/std",
  "futures-util/std",
  "num-bigint/std",
  "serde/std",
  "thiserror/std",
  "tracing/std"
]

[lints]
workspace = true
