[package]
name = "sedimentree_core"
version = "0.3.0"
description = "Sedimentree: a hash-linked CRDT storage structure with fragments, commits, and content-addressed blobs"

authors.workspace = true
categories = ["data-structures"]
edition.workspace = true
keywords = ["set-reconcilliation"]
license.workspace = true
readme = "./README.md"
repository.workspace = true
rust-version.workspace = true

[dependencies]
arbitrary = { workspace = true, optional = true, features = ["derive"] }
async-lock = { workspace = true }
blake3 = { workspace = true }
bolero = { workspace = true, optional = true, features = ["arbitrary"] }
futures = { workspace = true }
future_form = { workspace = true }
futures-util = { workspace = true }
getrandom = { workspace = true, optional = true }
minicbor = { workspace = true }
nonempty = { workspace = true }
num-bigint = { workspace = true }
rand = { workspace = true, optional = true, features = ["small_rng"] }
serde = { workspace = true, optional = true, features = ["derive"]}
siphasher = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
arbitrary = { workspace = true, optional = false, features = ["derive"] }
bolero = { workspace = true, features = ["arbitrary"] }
criterion = { workspace = true }
dhat = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
tracing-subscriber = { workspace = true }

[[bench]]
name = "sedimentree"
harness = false

[features]
default = []
arbitrary = ["dep:arbitrary"]
bolero = ["dep:bolero", "arbitrary", "std"]
getrandom = ["dep:getrandom"]
serde = ["dep:serde"]
std = [
  "async-lock/std",
  "blake3/std",
  "futures/std",
  "futures-util/std",
  "num-bigint/std",
  "serde/std",
  "thiserror/std",
  "tracing/std"
]
test_utils = ["std", "arbitrary", "dep:rand"]

[lints]
workspace = true
