[package]
name = "sedimentree_fs_storage"
version = "0.8.0"
description = "Filesystem-based storage backend for Sedimentree"

categories = ["filesystem"]
keywords = ["sedimentree", "storage", "filesystem"]
readme = "./README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-lock = { workspace = true }
future_form = { workspace = true }
hex = { workspace = true }
sedimentree_core = { workspace = true, features = ["std"] }
subduction_core = { workspace = true, features = ["std"] }
subduction_crypto = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
tracing = { workspace = true, default-features = true }

[dev-dependencies]
criterion = { workspace = true }
criterion_pprof = { workspace = true }
futures = { workspace = true, features = ["executor"] }
sedimentree_core = { workspace = true, features = ["std", "test_utils"] }
subduction_bench_support = { workspace = true, features = ["criterion_harness", "fs_fixtures"] }
subduction_crypto = { workspace = true, features = ["std", "test_utils"] }
tempfile = { workspace = true }
testresult = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }

[[bench]]
name = "storage"
harness = false

[lints]
workspace = true
