[package]
name = "sedimentree_fs_storage"
version = "0.11.0"
description = "Filesystem-based storage backend for Sedimentree"

categories = ["filesystem"]
keywords = ["sedimentree", "storage", "filesystem"]
readme = "./README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-lock = { workspace = true }
future_form = { workspace = true }
hex = { workspace = true }
sedimentree_core = { workspace = true, features = ["std"] }
subduction_core = { workspace = true, features = ["std"] }
subduction_crypto = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "rt"] }
tracing = { workspace = true, default-features = true }

[dev-dependencies]
bolero = { workspace = true, features = ["arbitrary"] }
criterion = { workspace = true }
future_form = { workspace = true }
subduction_core = { workspace = true, features = ["std", "test_utils"] }
subduction_crypto = { workspace = true, features = ["std"] }
tempfile = { workspace = true }
testresult = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }

[lints]
workspace = true

[[bench]]
name = "load_loose_commits"
harness = false
