[package]
name = "sedimentree_sync_cli"
version = "0.1.0"
edition.workspace = true

[dependencies]
automerge = "0.6.1" # FIXME use workspace version
bincode = { version = "2.0", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3.31"
futures-util = "0.3.31"
serde = { workspace = true }
sedimentree_core = { path = "../sedimentree_core" }
sedimentree_sync_core = { path = "../sedimentree_sync_core" }
rand = "0.9.2"
thiserror = { workspace = true }
tokio = { version = "1.46", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["tokio-native-tls"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
tungstenite = "0.27"
url = "2.5"
