[lib]
crate-type = ["cdylib", "rlib"]

[package]
name = "sedimentree_sync_wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
automerge = { workspace = true, features = ["wasm"] }
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = ["console"] } # FIXME temp for development
sedimentree_sync_core = { path = "../sedimentree_sync_core" }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
