[package]
name = "sedimentree_sync_websocket"
version = "0.1.0"
description = "WebSocket implementation for Sedimentree Sync"

categories = ["web-programming"]
keywords = ["sedimentree-sync", "websocket"]
readme = "./README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bincode = { version = "2.0", features = ["serde"] }
futures-util = "0.3.31"
rand = { workspace = true }
serde = { workspace = true }
sedimentree_core = { path = "../sedimentree_core", features = ["serde"] }
sedimentree_sync_core = { path = "../sedimentree_sync_core", features = ["serde"] }
thiserror = { workspace = true }
tokio = { version = "1.46" }
tokio-tungstenite = { version = "0.27.0", features = ["tokio-native-tls"] }
tracing = { workspace = true }
tungstenite = "0.27"
