[package]
name = "sedimentree_sync_websocket"
version = "0.1.0"
description = "WebSocket implementation for Sedimentree Sync"

categories = ["web-programming"]
keywords = ["sedimentree-sync", "websocket"]
readme = "./README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-tungstenite = { version = "0.31.0", features = ["async-native-tls"] }
bincode = { version = "2.0", features = ["serde"] }
futures = { workspace = true }
futures-timer = { workspace = true }
futures-util = { workspace = true }
rand = { workspace = true }
sedimentree_core = { path = "../sedimentree_core", features = ["serde"] }
sedimentree_sync_core = { path = "../sedimentree_sync_core", features = ["serde"] }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tungstenite = "0.27"
