[package]
name = "sedimentree_wasm"
version = "0.3.1"
description = "Wasm/JavaScript bindings for Sedimentree (browser and Node.js)"
categories = ["web-programming"]
keywords = ["sedimentree", "wasm"]
readme = "./README.md"
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-lock = { workspace = true }
base58 = { workspace = true }
from_js_ref = { workspace = true }
futures = { workspace = true }
future_form = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
js-sys = { workspace = true }
minicbor = { workspace = true }
sedimentree_core = { workspace = true }
subduction_core = { workspace = true }
subduction_crypto = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm_refgen = { workspace = true }

[dependencies.web-sys]
version = "0.3.81"
default-features = false
features = []

[dev-dependencies]
wasm-bindgen-test = "0.2"

[features]
default = []
# IndexedDB storage backend
idb = [
  "web-sys/DomException",
  "web-sys/DomStringList",
  "web-sys/IdbCursorWithValue",
  "web-sys/IdbDatabase",
  "web-sys/IdbFactory",
  "web-sys/IdbIndex",
  "web-sys/IdbKeyRange",
  "web-sys/IdbObjectStore",
  "web-sys/IdbObjectStoreParameters",
  "web-sys/IdbOpenDbRequest",
  "web-sys/IdbRequest",
  "web-sys/IdbTransaction",
  "web-sys/IdbTransactionMode",
  "web-sys/IdbVersionChangeEvent"
]
std = [
  "async-lock/std",
  "futures/std",
  "js-sys/std",
  "minicbor/std",
  "sedimentree_core/std",
  "subduction_core/std",
  "thiserror/std",
  "wasm-bindgen/std",
  "wasm-bindgen-futures/std"
]

[lints]
workspace = true
