[package]
name = "sedimentree_wasm"
version = "0.14.0"
description = "Wasm/JavaScript bindings for Sedimentree (browser and Node.js)"
categories = ["web-programming"]
keywords = ["sedimentree", "wasm"]
readme = "./README.md"
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-lock = { workspace = true }
base58 = { workspace = true }
from_js_ref = { workspace = true }
futures = { workspace = true }
future_form = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
js-sys = { workspace = true }
sedimentree_core = { workspace = true }
subduction_core = { workspace = true }
subduction_crypto = { workspace = true }
subduction_wasm_bootstrap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm_refgen = { workspace = true }

[dependencies.web-sys]
version = "0.3.98"
default-features = false
features = []

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["wasm-log-control"]
# Emit the JS-callable runtime log controls (`setSubductionLogLevel`,
# `set_subduction_logger`, `clear_subduction_logger`). Default-on so the
# standalone `@automerge/sedimentree` bundle exports them. The umbrella
# (`automerge_subduction_wasm`) disables it via `default-features = false` to
# avoid a duplicate `#[wasm_bindgen]` export collision — there the controls are
# inherited from `subduction_wasm`. Does NOT affect console logging or the
# startup level, which are installed unconditionally in the `start` function.
wasm-log-control = []
# IndexedDB storage backend
idb = [
  "web-sys/DomException",
  "web-sys/DomStringList",
  "web-sys/IdbCursorWithValue",
  "web-sys/IdbDatabase",
  "web-sys/IdbFactory",
  "web-sys/IdbIndex",
  "web-sys/IdbKeyRange",
  "web-sys/IdbObjectStore",
  "web-sys/IdbObjectStoreParameters",
  "web-sys/IdbOpenDbRequest",
  "web-sys/IdbRequest",
  "web-sys/IdbTransaction",
  "web-sys/IdbTransactionMode",
  "web-sys/IdbVersionChangeEvent"
]
std = [
  "async-lock/std",
  "futures/std",
  "js-sys/std",
  "sedimentree_core/std",
  "subduction_core/std",
  "subduction_crypto/std",
  "thiserror/std",
  "wasm-bindgen/std",
  "wasm-bindgen-futures/std"
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-multivalue", "--enable-mutable-globals", "--enable-nontrapping-float-to-int", "--enable-reference-types", "--enable-sign-ext", "--enable-simd"]

[lints]
workspace = true
