[package]
name = "subduction_automerge_wasm" # FIXME reverse namingto automerge subdutcion (reads better)
version = "0.1.0"
description = "Wasm exports for Subduction + Automerge"

categories = ["web-programming"]
keywords = ["sedimentree", "automerge", "wasm"]
readme = "./README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
automerge = { workspace = true, features = ["wasm"] }
build_info = { path = "../build_info" }
console_error_panic_hook = { version = "0.1.7", optional = true }
sedimentree_automerge_wasm = { path = "../sedimentree_automerge_wasm" }
subduction_wasm = { path = "../subduction_wasm" }
tracing = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-tracing = { workspace = true }
wasm_refgen = { workspace = true }

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[lints]
workspace = true
