[package]
name = "subduction_core"
version = "0.1.0"
description = "Core implementation and traits for the Subduction protocol"

categories = ["web-programming"]
keywords = ["sync", "subduction"]
readme = "./README.md"

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arbitrary = { workspace = true, optional = true, features = ["derive"] }
async-channel = { workspace = true }
async-lock = { workspace = true }
bolero = { workspace = true, optional = true, features = ["arbitrary"] }
futures = { workspace = true }
futures_kind = { workspace = true }
nonempty = { workspace = true }
sedimentree_core = { path = "../sedimentree_core", default-features = false }
serde = { workspace = true, optional = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
bolero = { workspace = true, features = ["arbitrary"] }
testresult = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[features]
default = []
arbitrary = ["dep:arbitrary", "sedimentree_core/arbitrary"]
bolero = ["dep:bolero", "arbitrary"]
serde = ["dep:serde"]
serde-std = ["serde/std"]
std = [
  "async-channel/std",
  "async-lock/std",
  "futures/std",
  "nonempty/std",
  "sedimentree_core/std",
  "thiserror/std"
]
test_utils = ["std"]

[lints]
workspace = true
