[package]
name = "subduction_core"
version = "0.1.0"
description = "Subduction: sync protocol for replicating Sedimentrees between peers"

categories = ["web-programming"]
keywords = ["sync", "subduction"]
readme = "./README.md"

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arbitrary = { workspace = true, optional = true, features = ["derive"] }
async-channel = { workspace = true }
async-lock = { workspace = true }
bolero = { workspace = true, optional = true, features = ["arbitrary"] }
ed25519-dalek = { workspace = true, features = ["zeroize"] }
futures = { workspace = true }
futures_kind = { workspace = true }
getrandom = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
minicbor = { workspace = true }
nonempty = { workspace = true }
sedimentree_core = { path = "../sedimentree_core", default-features = false }
serde = { workspace = true, optional = true, features = ["derive"] }
siphasher = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
bolero = { workspace = true, features = ["arbitrary"] }
criterion = { workspace = true }
rand = { workspace = true }
testresult = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "time"] }

[[bench]]
name = "subduction"
harness = false

[features]
default = []
arbitrary = ["dep:arbitrary", "sedimentree_core/arbitrary"]
getrandom = ["dep:getrandom"]
bolero = ["dep:bolero", "arbitrary"]
metrics = ["dep:metrics", "std"]
serde = ["dep:serde", "ed25519-dalek/serde"]
serde-std = ["serde/std"]
std = [
  "async-channel/std",
  "async-lock/std",
  "ed25519-dalek/std",
  "futures/std",
  "getrandom",
  "nonempty/std",
  "sedimentree_core/std",
  "thiserror/std"
]
test_utils = ["std"]

[lints]
workspace = true
