[package]
name = "subduction_core"
version = "0.3.1"
description = "Subduction: sync protocol for replicating Sedimentrees between peers"

categories = ["web-programming"]
keywords = ["sync", "subduction"]
readme = "./README.md"

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arbitrary = { workspace = true, optional = true, features = ["derive"] }
async-channel = { workspace = true }
async-lock = { workspace = true }
bolero = { workspace = true, optional = true, features = ["arbitrary"] }
ed25519-dalek = { workspace = true, features = ["zeroize"] }
futures = { workspace = true }
future_form = { workspace = true }
getrandom = { workspace = true }
metrics = { workspace = true, optional = true }
minicbor = { workspace = true }
nonempty = { workspace = true }
sedimentree_core = { workspace = true, features = ["getrandom"] }
serde = { workspace = true, optional = true, features = ["derive"] }
siphasher = { workspace = true }
subduction_crypto = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
bolero = { workspace = true, features = ["arbitrary"] }
criterion = { workspace = true }
futures = { workspace = true, features = ["executor"] }
rand = { workspace = true, features = ["std_rng"] }
subduction_core = { path = ".", features = ["bolero", "std", "test_utils"] }
testresult = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "time"] }

[[bench]]
name = "subduction"
harness = false

[features]
default = []
arbitrary = ["dep:arbitrary", "sedimentree_core/arbitrary", "subduction_crypto/arbitrary"]
bolero = ["dep:bolero", "arbitrary", "sedimentree_core/bolero", "subduction_crypto/bolero"]
metrics = ["dep:metrics", "std"]
serde = ["dep:serde", "ed25519-dalek/serde", "subduction_crypto/serde"]
serde-std = ["serde/std"]
std = [
  "async-channel/std",
  "async-lock/std",
  "ed25519-dalek/std",
  "futures/std",
  "nonempty/std",
  "sedimentree_core/std",
  "subduction_crypto/std",
  "thiserror/std"
]
test_utils = ["std"]

[lints]
workspace = true
